mainheadersdir = $(includedir)/satyr
mainheaders_HEADERS = \
	abrt.h \
	deb.h \
	distance.h \
	json.h \
	location.h \
	normalize.h \
	operating_system.h \
	report.h \
	report_type.h \
	rpm.h \
	strbuf.h \
	utils.h \
	stacktrace.h \
	thread.h \
	frame.h

# If you know HOW can I include subdirectories without explicitly enumerating
# them, PLEASE tell me.

coreheadersdir = $(includedir)/satyr/core
coreheaders_HEADERS = \
	core/fingerprint.h \
	core/frame.h \
	core/stacktrace.h \
	core/thread.h \
	core/unwind.h

gdbheadersdir = $(includedir)/satyr/gdb
gdbheaders_HEADERS = \
	gdb/frame.h \
	gdb/sharedlib.h \
	gdb/stacktrace.h \
	gdb/thread.h

javaheadersdir = $(includedir)/satyr/java
javaheaders_HEADERS = \
	java/frame.h \
	java/thread.h \
	java/stacktrace.h

koopsheadersdir = $(includedir)/satyr/koops
koopsheaders_HEADERS = \
	koops/frame.h \
	koops/stacktrace.h

pythonheadersdir = $(includedir)/satyr/python
pythonheaders_HEADERS = \
	python/frame.h \
	python/stacktrace.h

rubyheadersdir = $(includedir)/satyr/ruby
rubyheaders_HEADERS = \
	ruby/frame.h \
	ruby/stacktrace.h

jsheadersdir = $(includedir)/satyr/js
jsheaders_HEADERS = \
	js/platform.h \
	js/frame.h \
	js/stacktrace.h
